# DV_umotorsport

./: .clang-tidy  .gitignore  README.md  TODO.md  llms-full.txt  llms.txt  project_vision.md  pyproject.toml  stuff.md
.agents/: README.md  architecture.md  errors.md  investigation_rviz_accumulation.md  medulla.md  methodology.md  metodology.md  project_structure.md  scratchpad.md  simulation.md  vision.md
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  current_duration.txt  current_end_time.txt  current_plan_start_epoch.txt  current_plan_start_time.txt  task1_commit.txt  task2_commit.txt
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/assembly/: mounting_guide.md
heritage/kart_brain/training/perception/: pyproject.toml  sources.yaml
heritage/kart_docs/: .gitignore  generate_bom_hook.py  generate_bom_reports.sh  mkdocs.yml  pyproject.toml  test-docs.sh
heritage/kart_docs/docs/assembly/: index.md
heritage/kart_docs/docs/assembly/electronics/: computer.md  dac.md  microcontroller.md  wiring.md
heritage/kart_docs/docs/assembly/electronics/microcontroller/images/esp32/: index.md
heritage/kart_docs/docs/assembly/electronics/power/: battery.md  bom.yaml
heritage/kart_docs/docs/assembly/powertrain/: bom.yaml  fasteners.md  transmission.md
heritage/kart_docs/docs/assembly/powertrain/transmission/: bom.yaml
heritage/kart_docs/docs/assembly/steering/: h-bridge.md
heritage/kart_docs/docs/assembly/steering/fasteners/: bom.yaml
heritage/kart_docs/docs/hydraulics/: index.md
heritage/kart_docs/docs/iterations/: 2.md
heritage/kart_docs/docs/resources/: bom.md
heritage/kart_docs/docs/software/: architecture.md  ros2-nodes.md
heritage/kart_docs/reports/: bom_all_components.csv  bom_assembly_costs.csv
kart_brain/: .gitignore  AGENTS.md  TODO.md  pyproject.toml  stuff.md
kart_brain/.agents/: README.md  architecture.md  error_log.md  orin_environment.md  orin_flash_guide.md  vm_environment.md
kart_brain/.agents/postmortems/: README.md
kart_brain/docs/: ACTUATION_PROTOCOL.md
kart_brain/models/perception/yolo/: README.md
kart_brain/proto/: kart_msgs.proto
kart_brain/proto/generated_c/: kart_msgs.pb.c
kart_brain/proto/nanopb/: kart_msgs.options
kart_brain/scripts/: fix_output_limit.sh  run_yolo_on_media.py  sine_steering_test.py
kart_brain/scripts/sim2d/: ga.py  generate_sdf.py  kart_model.py  perception.py  results_cma_v2_best.json  results_cma_v2_noisy_best.json  results_cma_v3_finetuned_best.json  track.py  train.py
kart_brain/scripts/sim2d/results/: best_geometric.json
kart_brain/scripts/sim2d/results_v3/: best_neural_v2.json
kart_brain/scripts/sim2d/results_v4_fresh/: best_neural_v2.json
kart_brain/src/: TODO.md
kart_brain/src/kart_bringup/: package.xml
kart_brain/src/kart_bringup/config/: teleop_params.yaml
kart_brain/src/kart_bringup/launch/: dashboard.launch.py  gui.launch.py
kart_brain/src/kart_bringup/scripts/: cmd_vel_bridge_node.py
kart_brain/src/kart_perception/: package.xml  setup.cfg
kart_brain/src/kart_perception/kart_perception/: cone_marker_viz_3d_node.py  hud_viewer_node.py  image_source_node.py  yolo_detector_node.py
kart_brain/src/kart_perception/launch/: perception_3d.launch.py  perception_test.launch.py
kart_brain/src/kart_sim/: CMakeLists.txt
kart_brain/src/kart_sim/config/: neural_v2_weights.json  neural_weights.json
kart_brain/src/kart_sim/launch/: simulation.launch.py
kart_brain/src/kart_sim/models/cone_blue/: model.sdf
kart_brain/src/kart_sim/models/cone_orange_big/: model.sdf
kart_brain/src/kart_sim/models/cone_yellow/: model.sdf
kart_brain/src/kart_sim/models/kart/: model.config  model.sdf
kart_brain/src/kart_sim/scripts/: evaluate_perception.py  perfect_perception_node.py
kart_brain/src/kb_coms_micro/: CMakeLists.txt  package.xml
kart_brain/src/kb_coms_micro/src/kb_coms_micro/: kb_coms_micro.cpp
kart_brain/src/kb_dashboard/: setup.py
kart_brain/src/kb_dashboard/kb_dashboard/: index.html  protocol.py  server.py
kart_brain/src/kb_dashboard/test/: test_manual_ws.py  test_webserver.py
kart_brain/src/kb_interfaces/: CMakeLists.txt
kart_brain/src/kb_serial_driver_lib/: CMakeLists.txt
kart_brain/src/kb_serial_driver_lib/include/: kb_coms_serial_driver.hpp
kart_brain/tests/: test_rviz_accumulation.py  test_steering_gain.py
kart_brain/training/perception/: dataset.yaml  prepare_dataset.py  train.py
kart_docs/: CLAUDE.md  GEMINI.md  README.md  TODO.md  dev.sh  generate_bom_hook.py  generate_llm_files.py  generate_llm_hook.py  install.sh  mkdocs.yml  stuff.md
kart_medulla/: AGENTS.md  Doxyfile  README.md  TODO.md  monitor_serial.py  sdkconfig  sdkconfig.defaults  sdkconfig.esp32-c3-devkitc-02  sdkconfig.esp32-c6-devkitc-1  sdkconfig.esp32-s3-devkitc-1  sdkconfig.old
scripts/: generate_llms_txt.py
(+445 files in other folders)
