[project]
name = "kart_docs"
version = "0.1.0"
description = "Documentation for the autonomous KART project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-exporter>=6.2.0",
    "playwright>=1.52.0",
    "pypdf>=5.6.1",
    "shell-gpt>=1.4.5",
    "pyyaml>=6.0",
]
